# CrewAI-BuildApplicationsAgentCrew

./: Crew_AI_Python_applications.ipynb  FlaskAPI.md  README.md  final_project_summary.md  pyproject.toml  report.md
src/python_app/: crew.py  main.py
src/python_app/config/: agents.yaml  tasks.yaml
