[project]
name = "python_app"
version = "0.1.0"
description = "python_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
python_app = "python_app.main:run"
run_crew = "python_app.main:run"
train = "python_app.main:train"
replay = "python_app.main:replay"
test = "python_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
